# embedded-gauge-reading-tinyml

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PLANS.md  README.md  justfile  plan.md  tmp_eval_v28_pipeline.txt  tmp_v28_pipeline.txt
ml/: README.md  SOTA_MODEL_README.md  SOTA_SUMMARY.md  SOTA_TRAINING_PLAN.md  _probe_cascade.py  _probe_tf.py  debug_manifest.py  eval_enhanced_vs_prod.py  export_and_eval.py  export_tflite.py  export_tflite_only.py  pyproject.toml  run_simple_training.sh  test_output.txt  tmp_count_images.py  tmp_debug_cv2.py  tmp_debug_dataset.py  tmp_debug_masks.py  tmp_debug_shapes.py  tmp_debug_training.py  tmp_smoke_test.py  tmp_test_dataset_order.py  tmp_test_dataset_order2.py  tmp_test_exact.py  tmp_test_fit.py  tmp_test_model.py  tmp_test_model2.py  tmp_test_model3.py  tmp_test_model4.py  tmp_test_model5.py
ml/c/: rim_estimator.c
ml/configs/: gauge_face_ellipse_v1_640_gray.yaml
ml/data/: ai_annotated_board_captures.csv  all_captured_images_manifest.csv  board_bbox_labels.csv  board_captures_labeled.csv  board_captures_labeled_v2.csv  board_center_tip_labels.csv  board_center_tip_reviewed_boxes_labels.csv  board_rectified_probe_20260422.csv  board_weak_focus.csv  canonical_manifest_v1.csv  capture_2026-06-07_labels.csv  capture_2026-06-07_labels_v2.csv  combined_training_manifest.csv  full_labelled_plus_board30_valid_with_new5.csv  full_range_regression_focus.csv  full_scalar_manifest_conflicts_v1.csv  full_scalar_manifest_v1.csv  geometry_board_heatmap_manifest_v1.csv  geometry_board_heatmap_manifest_v2.csv  geometry_board_heatmap_manifest_v2_fixed.csv  geometry_crop_boxes_v18.csv  hard_cases.csv  (+46 more)
(+6847 files in other folders)
